// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should call datadog webhook  for archived toggle 1`] = `"{"text":"%%% \\n  some@user.com just archived feature toggle *[some-toggle](http://some-url.com/archive)* \\n %%% ","title":"Unleash notification update","tags":[]}"`;

exports[`Should call datadog webhook  for archived toggle with project info 1`] = `"{"text":"%%% \\n  some@user.com just archived feature toggle *[some-toggle](http://some-url.com/projects/some-project/archive)* \\n %%% ","title":"Unleash notification update","tags":[]}"`;

exports[`Should call datadog webhook 1`] = `"{"text":"%%% \\n some@user.com created feature toggle [some-toggle](http://some-url.com/projects//features/some-toggle) in project *undefined* \\n %%% ","title":"Unleash notification update","tags":[]}"`;

exports[`Should call datadog webhook for toggled environment 1`] = `"{"text":"%%% \\n some@user.com *disabled* [some-toggle](http://some-url.com/projects/default/features/some-toggle) in *development* environment in project *default* \\n %%% ","title":"Unleash notification update","tags":[]}"`;

exports[`Should include customHeaders in headers when calling service 1`] = `"{"text":"%%% \\n some@user.com *disabled* [some-toggle](http://some-url.com/projects/default/features/some-toggle) in *development* environment in project *default* \\n %%% ","title":"Unleash notification update","tags":[]}"`;

exports[`Should include customHeaders in headers when calling service 2`] = `
{
  "Content-Type": "application/json",
  "DD-API-KEY": "fakeKey",
  "MY_CUSTOM_HEADER": "MY_CUSTOM_VALUE",
}
`;

exports[`Should not include source_type_name when included in the config 1`] = `"{"text":"%%% \\n some@user.com *disabled* [some-toggle](http://some-url.com/projects/default/features/some-toggle) in *development* environment in project *default* \\n %%% ","title":"Unleash notification update","tags":[],"source_type_name":"my-custom-source-type"}"`;

exports[`Should not include source_type_name when included in the config 2`] = `
{
  "Content-Type": "application/json",
  "DD-API-KEY": "fakeKey",
}
`;
